# sem1-pp-extra-ptak-ana

./: CMakeLists.txt  README.md  ananas.h
src/: game_of_life.c  matrix.c  menu.c  menu_enum_conversions.c  menu_input_parser.c  menu_utility.c  tower_of_hanoi.c
